--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>webpack with react</title>
 </head>
 <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
+    <div id="root"></div>
 </body>
 </html>
